--- a/package.json
+++ b/package.json
@@ -6,11 +6,19 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@date-io/date-fns": "^1.3.11",
+    "@material-ui/core": "^4.6.1",
+    "@material-ui/icons": "^4.5.1",
+    "@material-ui/pickers": "^3.2.8",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
+    "date-fns": "^2.0.0-alpha.16",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "papaparse": "^5.1.0",
+    "throttle-debounce": "^2.1.0"
   }
 }
