--- a/package.json
+++ b/package.json
@@ -1,24 +1,32 @@
 {
+  "homepage": "https://hafeezkhan826.github.io/csv-parse-search-filter/",
   "name": "csv-parse-and-search-filter",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "server": "nodemon ./bin/www",
+    "client": "npm start --prefix react-app",
+    "application": "concurrently \"npm run server\" \"npm run client\" ",
+    "fe-app": "npm start",
+    "predeploy": "npm run application",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@date-io/date-fns": "^1.3.11",
     "@material-ui/core": "^4.6.1",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/pickers": "^3.2.8",
+    "concurrently": "^5.0.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "date-fns": "^2.0.0-alpha.16",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "gh-pages": "^2.1.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
-    "papaparse": "^5.1.0",
-    "throttle-debounce": "^2.1.0"
+    "papaparse": "^5.1.0"
   }
 }
